--- a/client/src/components/FullPost/FullPost.scss
+++ b/client/src/components/FullPost/FullPost.scss
@@ -8,9 +8,9 @@
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     text-align: center;
-    
     position:relative;
     font-size:15px;
+    overflow: hidden;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     .Title{
       position:absolute;
@@ -28,6 +28,16 @@
         line-height: 30px;
         margin:170px 25px 25px;
         margin-right:25px; 
+        .Head{
+          color:darken($primaryColor,20%);
+          float:left;
+          clear: both
+        }
+        .Date{
+          background-color:lighten($accentColor,40%);
+          float:left;
+          clear: both;
+        }
         }
     @media (min-width: $xSmallBorder) {
           margin: 0;
