--- a/client/src/components/Post/Post.scss
+++ b/client/src/components/Post/Post.scss
@@ -1,32 +1,66 @@
 @import '../../variables.scss';
 
-
 .Post {
-        width: 250px;
-        padding: 16px;
-        text-align: center;
-        border: 1px solid #eee;
-        box-shadow: 0 2px 3px #ccc;
-        margin: 10px;
-        box-sizing: border-box;
-        cursor: pointer;
-        transition:all 0.5s ease-in-out;
-        margin:120px auto; 
-        @media (min-width: $mediumBorder) {
-            width: 25%;
-        }
-       @media (max-width: $xSmallBorder) {
-            width: 80%;  
-        }
+    width: 70%;
+    margin: 20px auto;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    text-align: center;
+    position:relative;
+    font-size:15px;
+    overflow: hidden;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     .Title{
-        position:relative;
-        h1{
-         font-size:15px;
-        }
-
+      position:absolute;
+      background-color:lighten($primaryColor,30%);
+      padding:5px;
+      height:100%;  
+      font-size:25px;
+      width: 100%;
+      color:#fff;
+      padding: 5px;
+      font-family:Verdana, Geneva, Tahoma, sans-serif;
+      clip-path: polygon(0 0, 100% 0%, 100% 34%, 0 26%);
     }
-
-   }
-
-
+    .Content{
+        line-height: 30px;
+        margin:170px 25px 25px;
+        margin-right:25px; 
+        .Head{
+          color:darken($primaryColor,20%);
+          float:left;
+          clear: both
+        }
+        .Date{
+        border-radius:5px;
+          background-color:lighten($accentColor,40%);
+          float:left;
+          clear: both;
+         }
+        }
+    @media (min-width: $xSmallBorder) {
+          margin: 0;
+          width: 50%;
+          margin:120px auto; 
+          h1{
+            font-size:22px;
+        }
+      }
+      @media (max-width: $xSmallBorder) {
+          h1{
+            font-size:22px;
+          }
+          margin: 0;
+          width: 80%;
+          margin:120px auto; 
+      }
+    .Buttons{
+       float: right 
+      }
+      &:hover{
+        transform: scale(1.05, 1.05);
+        box-shadow: 0 5px 7px #ccc;
+        transition:all 1s ease-in-out;
+      }
+}
 
