--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,8 @@
 body {
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
